Restoring infix solution

--- a/Infix-to-Postfix-Converter.ipynb
+++ b/Infix-to-Postfix-Converter.ipynb
@@ -148,6 +148,57 @@
    "source": [
     "to_postfix(\"2^2^2^(4-2*(3+4))\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2423^4-*^'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LEFT = lambda a,b: a>=b\n",
+    "RIGHT = lambda a,b: a>b\n",
+    "PREC = {'+': 2, '-': 2, '*': 3, '/': 3, '^': 4, '(': 1, ')': 1}\n",
+    "OP_ASSOCIATION = {'+': LEFT, '-': LEFT, '*': LEFT, '/': LEFT, '^': RIGHT}\n",
+    "\n",
+    "def to_postfix (infix):\n",
+    "    postfix = []\n",
+    "    stack = []\n",
+    "    for ch in infix:\n",
+    "        prec = PREC.get(ch, 0)\n",
+    "        if prec == 0:\n",
+    "            postfix.append(ch)\n",
+    "        elif ch in '(':\n",
+    "            stack.append(ch)\n",
+    "        elif ch in ')':\n",
+    "            while stack[-1] != '(':\n",
+    "                postfix.append(stack.pop())\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            while stack and OP_ASSOCIATION[ch](PREC[stack[-1]], prec):\n",
+    "                postfix.append(stack.pop())\n",
+    "            stack.append(ch)\n",
+    "        \n",
+    "    return ''.join(postfix + stack[::-1])\n",
+    "to_postfix('2^(4*(2^3-4))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
